--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Closer</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+    *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}body{width:100%;height:100vh;position:fixed;display:flex;flex-direction:column;justify-content:center;align-items:center;margin:0}::selection,::-webkit-selection{background-color:rgba(0,123,255,.25)}#placer{position:fixed;z-index:-100;top:0;width:100%;flex-direction:column;justify-content:center;align-items:center;padding-top:30px}h1{font-weight:400;font-size:36px;margin:0;text-align:center}h2{font-weight:400;font-size:18px;text-align:center},#code::before{content:"#"}#code{margin-top:30px;width:275px;appearance:none;-webkit-appearance:none;padding:10px;border:0;border-bottom:2px solid #ceced2;background-color:transparent;text-align:center;outline:none;font-size:28px;color:#8e8e93;border-radius:0;letter-spacing:.25rem}#canvas{width:275px;height:275px;border-radius:5px;box-shadow:0 15px 50px rgba(0,0,0,.375)}label{position:absolute;z-index:-99;margin-top:153px;padding-right:150px;font-size:28px;color:#8e8e93}h1,h2,div,label,body,html{box-sizing:border-box;-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important;-webkit-tap-highlight-color:rgba(0,0,0,0)!important;-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none!important;-webkit-text-size-adjust:none;-webkit-overflow-scrolling:touch}img::selection,img::-webkit-selection{background-color:transparent}
+    </style>
 </head>
 <body>
     <div id="placer">
